# Kynonim

./: .gitignore  Cargo.toml  README.md  ROUTER.md  Trunk.toml  index.html
public/: style.css
src/: lib.rs  main.rs
src/app/: cryptarithm.rs  game.rs  mod.rs  motivasi.rs
src/components/: mod.rs  section.rs
src/utils/: icons.rs  image.rs  mod.rs  statis.rs
