[package]
name = "riky"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = { version = "0.11.0", features = ["timers", "events"] }
leptos = { version = "0.8.19", features = ["csr"] }
web-sys = { version = "0.3.77", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlDivElement",
  "CssStyleDeclaration",
  "DomRect",
]}
