[package]
name = "riky"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-timers = { version = "0.4.0", features = ["futures"] }
leptos = { version = "0.8.19", features = ["csr"] }
leptos_router = "0.8.13"
web-sys = { version = "0.3.77", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlDivElement",
  "CssStyleDeclaration",
  "DomRect",
]}
